# AFP_BOM_demo

./: .dockerignore  .gitattributes  .gitignore  .uuid.patch  AFP_Product_Suggestion_Effective_Guide.md  AFP_Rebuild_Guide_NextJS_FastAPI_Supabase.md  Dockerfile  README.md  docker-compose.yml
backend/: .env.example  check_columns.py  debug_suggest.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: mock_db.py  supabase_client.py
backend/app/routes/: bom.py  catalog.py  exports.py  import_revit.py  projects.py  search.py  suggestions.py
backend/app/services/: approval_service.py  bom_service.py  bom_status_service.py  export_service.py  import_service.py  llm_bom_service.py  pipeline_service.py  product_matcher.py  ranking_service.py  requirement_service.py  suggestion_constants.py  vector_service.py
backend/tests/: test_exports.py  test_import_schema_compatibility.py  test_llm_bom_service.py  test_revit_import_flow.py  test_suggestion_pipeline.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/products/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/[projectId]/: page.tsx
frontend/app/suppliers/: page.tsx
frontend/components/: chrome.tsx  global-search.tsx  mobile-menu.tsx  project-import-button.tsx  project-progress.tsx  project-remove-button.tsx  project-tabs.tsx  workflow-status.tsx
frontend/lib/: api.ts
samples/: revit-paint-sample.json
(+6 files in other folders)
